# untitled-game2

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/: links.txt
dep/: CMakeLists.txt
doc/: TODO.md  design_diagram.txt  design_overview.md  logic.md
include/: app.h  category.h  command.h  command_queue.h  conf.h  creature.h  data_tables.h  debug.h  entity.h  foreach.h  imguistyle.h  m_ids.h  map-asset.h  p_task.h  pickup.h  player.h  projectile.h  r_holders.h  r_ids.h  s_game.h  s_ids.h  s_loading.h  s_menu.h  s_pause.h  s_settings.h  s_stack.h  s_title.h  scene_node.h  sprite_node.h  state.h  task-thread.h  text_node.h  tile.h  utility.h  world.h
release/4-19-24/: occ-accessibility-tour
release/4-24-24/: CMakeCache.txt  Doxyfile  Makefile  cmake_install.cmake  occ-accessibility-tour  search-dir-for-string.pl
res/textures/world/: grass-assets-transparent.png~
scripts/: cmake-clean-build.sh
src/: CMakeLists.txt  CTestTestfile.cmake  app.cpp  command.cpp  command_queue.cpp  conf.cpp  creature.cpp  data_tables.cpp  debug.cpp  entity.cpp  game_config.h  imguistyle.cpp  main.cpp  map-asset.cpp  p_task.cpp  pickup.cpp  player.cpp  projectile.cpp  r_holders.cpp  s_game.cpp  s_loading.cpp  s_menu.cpp  s_pause.cpp  s_settings.cpp  s_stack.cpp  s_title.cpp  scene_node.cpp  sprite_node.cpp  state.cpp  task-thread.cpp  testing.cpp  text_node.cpp  tile.cpp  utility.cpp  world.cpp
stt/: CMakeLists.txt
stt/dep/deepspeech-models/: get-models.sh
stt/doc/: design.md
stt/include/stt/: speech-to-text.h
stt/old/: command.h  daemon.cpp  record.cpp  record.h  stream.cpp  stream.h  stt.cpp
stt/old/4-19-24/: key-queue.cpp  key-queue.h  key.h  stt-api.cpp  stt-api.h
stt/release/4-12-24/: voice
stt/src/: speech-to-text.cpp
